--- a/aws/PAS-AIO-DR-Deployment.yaml
+++ b/aws/PAS-AIO-DR-Deployment.yaml
@@ -484,6 +484,64 @@ Resources:
       Handler: index.lambda_handler
       Timeout: 60
       Role: !GetAtt 'LambdaRemovePermissionsRole.Arn'
+  DescribeImagesRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Action: sts:AssumeRole
+            Effect: Allow
+            Principal:
+              Service: lambda.amazonaws.com
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+      Policies:
+        - PolicyName: DescribeImages
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Action: ec2:DescribeImages
+                Effect: Allow
+                Resource: "*"
+  GetLatestAMI:
+    Type: AWS::Lambda::Function
+    Properties:
+      Runtime: python3.6
+      Handler: index.handler
+      Role: !Sub ${DescribeImagesRole.Arn}
+      Timeout: 60
+      Code:
+        ZipFile: |
+          import boto3
+          import cfnresponse
+          import json
+          import traceback
+          def handler(event, context):
+            try:
+              response = boto3.client('ec2').describe_images(
+                  Filters=[
+                    {'Name': 'tag:Cyberark_version', 'Values': [event['ResourceProperties']['Version']]},
+                    {'Name': 'tag:component', 'Values': [event['ResourceProperties']['Component']]},
+                    {'Name': 'tag:os', 'Values': [event['ResourceProperties']['OS']]},
+                  ],
+              )
+              amis = sorted(response['Images'],
+                            key=lambda x: x['CreationDate'],
+                            reverse=True)
+              id = amis[0]['ImageId']
+        
+              cfnresponse.send(event, context, cfnresponse.SUCCESS, {}, id)
+            except:
+              traceback.print_last()
+              cfnresponse.send(event, context, cfnresponse.FAIL, {}, "ok")
+  VaultAmi:
+    Type: Custom::FindAMI
+    Properties:
+      ServiceToken: !Sub ${GetLatestAMI.Arn}
+      Version: "12.2"
+      Component: "vault"
+      OS: !If [WinVersionIs16, 'Win2016', 'Win2019']
   VaultMachine:
     Type: AWS::EC2::Instance
     Properties:
@@ -492,10 +550,7 @@ Resources:
           Value: !Ref 'VaultInstanceName'
       SecurityGroupIds: !Ref 'VaultInstanceSecurityGroups'
       SubnetId: !Ref 'VaultInstanceSubnetId'
-      ImageId: !FindInMap
-        - RegionMap
-        - !Ref 'AWS::Region'
-        - Vault
+      ImageId: !Ref VaultAmi
       InstanceType: !Ref 'VaultInstanceType'
       UserData: !Base64
         Fn::Sub: |-
@@ -575,10 +630,7 @@ Resources:
             VolumeSize: 30
             Encrypted: true
       SubnetId: !Ref 'DRInstanceSubnetId'
-      ImageId: !FindInMap
-        - RegionMap
-        - !Ref 'AWS::Region'
-        - Vault
+      ImageId: !Ref VaultAmi
       InstanceType: !Ref 'VaultInstanceType'
       UserData: !Base64
         Fn::Sub: |-
@@ -838,6 +890,13 @@ Resources:
       Roles:
         - !Ref 'ComponentInstanceRole'
     DeletionPolicy: Retain
+  ComponentsAmi:
+    Type: Custom::FindAMI
+    Properties:
+      ServiceToken: !Sub ${GetLatestAMI.Arn}
+      Version: "12.2"
+      Component: "aio"
+      OS: !If [WinVersionIs16, 'Win2016', 'Win2019']
   ComponentsMachine:
     Type: AWS::EC2::Instance
     Properties:
@@ -846,10 +905,7 @@ Resources:
           Value: !Ref 'ComponentsInstanceName'
       SecurityGroupIds: !Ref 'ComponentsInstanceSecurityGroups'
       SubnetId: !Ref 'ComponentsInstanceSubnetId'
-      ImageId: !FindInMap
-        - RegionMap
-        - !Ref 'AWS::Region'
-        - Components
+      ImageId: !Ref ComponentsAmi
       InstanceType: !Ref 'ComponentsInstanceType'
       UserData: !Base64
         Fn::Sub: |-
@@ -993,6 +1049,13 @@ Parameters:
       - Accept
       - Decline
     Default: Decline
+  WinVersion:
+    Type: String
+    Description: Select a Windows Server version for all Windows-based components.
+    AllowedValues:
+      - Windows Server 2016
+      - Windows Server 2019
+    Default: Windows Server 2016
   KeyName:
     Type: AWS::EC2::KeyPair::KeyName
     Description: Select an existing Key Pair from your AWS account.
@@ -1138,6 +1201,7 @@ Metadata:
           - VaultFilesBucket
           - LicenseFile
           - RecoveryPublicKey
+          - WinVersion
       - Label:
           default: Vault and DR Configuration
         Parameters:
@@ -1164,6 +1228,8 @@ Metadata:
     ParameterLabels:
       EULA:
         default: License Agreement
+      WinVersion:
+        default: Windows Server Version
       KeyName:
         default: Key Pair
       VaultFilesBucket:
@@ -1210,65 +1276,9 @@ Conditions:
   SecretEmpty: !Equals
     - ''
     - !Ref Secret
-Mappings:
-  RegionMap:
-    us-east-1:
-      Vault: ami-0f9fba410e4b5b5e8
-      Components: ami-013c220bf010c588d
-    us-east-2:
-      Vault: ami-0d68869e888d7dd2d
-      Components: ami-0694a0add81c9b9b9
-    eu-west-2:
-      Vault: ami-01b3bf309e06a63fd
-      Components: ami-027c4601e663aacd7
-    eu-west-3:
-      Vault: ami-0e317eef0bd2561a5
-      Components: ami-0ba599f15a600f541
-    eu-north-1:
-      Vault: ami-01890377aae7ff367
-      Components: ami-011a11e64ff9192ee
-    us-west-1:
-      Vault: ami-041b1d1b5ad6f1647
-      Components: ami-01ccc4ccca2468a51
-    us-west-2:
-      Vault: ami-011a35e97a0110026
-      Components: ami-02409c0fe7cf556d6
-    ca-central-1:
-      Vault: ami-097ba0085dfb1cc8a
-      Components: ami-062c834b60eefac19
-    eu-west-1:
-      Vault: ami-029d014ac3fc50414
-      Components: ami-04905e4b2943fa461
-    eu-central-1:
-      Vault: ami-04a87cd0ee27dc283
-      Components: ami-004906adcb77bd31d
-    ap-southeast-1:
-      Vault: ami-02c5657e99a781efb
-      Components: ami-088ea8cbcc8abc767
-    ap-southeast-2:
-      Vault: ami-05aaeb1d83fc592f8
-      Components: ami-0725e12a89a18151c
-    ap-northeast-2:
-      Vault: ami-0450cefaec1d64ef6
-      Components: ami-0dc75953bd1ecd92b
-    ap-northeast-1:
-      Vault: ami-07e5803dfa62c5461
-      Components: ami-0057f4c145f4db0e1
-    ap-south-1:
-      Vault: ami-040dcbb7289b83f68
-      Components: ami-0e5211589cc376fa2
-    sa-east-1:
-      Vault: ami-071f36a553f862fc7
-      Components: ami-0faa8d5a5637747e6
-    me-south-1:
-      Vault: ami-01986101ffd05cb86
-      Components: ami-078773d46707c77e1
-    us-gov-west-1:
-      Vault: ami-0f977ab459adff29a
-      Components: ami-05b0f11c581e05ddb
-    us-gov-east-1:
-      Vault: ami-0d1fe90a793e652fc
-      Components: ami-0f526bfae7ebc03fc
+  WinVersionIs16: !Equals
+    - 'Windows Server 2016'
+    - !Ref "WinVersion"
 Outputs:
   CloudWatchLogGroupName:
     Description: The name of the CloudWatch log group
